# WebWindow

./: .gitignore  README.md  azure-pipelines.yml
samples/HelloWorldApp/: HelloWorldApp.csproj  Program.cs
samples/HelloWorldApp/wwwroot/: index.html
src/WebWindow/: WebWindow.cs  WebWindow.csproj
src/WebWindow.Native/: CMakeLists.txt  WebWindow.Native.vcxproj  WebWindow.h
src/WebWindow.Native/WebWindow.Native.Linux/: WebWindow.Linux.cpp
src/WebWindow.Native/WebWindow.Native.Mac/: WebWindow.Mac.UiDelegate.h  WebWindow.Mac.mm
src/WebWindow.Native/WebWindow.Native.Windows/: ToastHandler.hpp  WebWindow.Windows.cpp  wintoastlib.cpp
